--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
       </div>
 
       <!-- Таблица сравнения -->
+      <div class="table-wrapper">
+        <div class="spinner" id="table-spinner"></div>
       <table class="comparison-table">
         <thead>
           <tr>
@@ -114,6 +116,7 @@
           </tr>
         </tbody>
       </table>
+    </div>
     </div>
   </main>
 
