--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Сравнение условий жизни в разных странах для миграции" />
   <title>MigrationCompare — Сравнение стран</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/layout.css" />
   <link rel="stylesheet" href="css/components.css" />
@@ -20,7 +21,7 @@
       <nav class="nav">
         <a href="index.html">Главная</a>
         <a href="countries.html">Страны</a> <!-- ✅ переход сюда -->
-        <a href="#">О нас</a>
+        <a href="about.html">О нас</a>
       </nav>
     </div>
   </header>
