--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/layout.css" />
   <link rel="stylesheet" href="css/components.css" />
   <link rel="stylesheet" href="css/responsive.css" />
+  
 </head>
 <body>
 
@@ -98,6 +99,9 @@
         </table>
       </div>
     </div>
+    <div style="text-align: center; margin: 30px 0;">
+      <button id="export-pdf" class="button">Сохранить сравнение в PDF</button>
+    </div>
   </main>
 
   <!-- Подвал -->
@@ -106,8 +110,12 @@
       <p>&copy; 2025 MigrationCompare. Все права защищены.</p>
     </div>
   </footer>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+  <script src="js/pdf-export.js"></script>
+  
   <script src="js/data.js" type="module"></script>
   <script src="js/main.js" type="module"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 </body>
 </html>
