--- a/countries.html
+++ b/countries.html
@@ -17,7 +17,7 @@
       <nav class="nav">
         <a href="index.html">Главная</a>
         <a href="countries.html">Страны</a>
-        <a href="#">О нас</a>
+        <a href="about.html">О нас</a>
       </nav>
     </div>
   </header>
@@ -26,52 +26,52 @@
     <h1 style="text-align:center; margin-top: 40px;">Популярные страны для жизни и удалённой работы</h1>
     <div class="countries-grid">
       <a href="index.html?country1=armenia" class="country-card">
-        <img src="flags/armenia.png" alt="Армения">
+        <img src="/images/армения.jpg" alt="Армения">
         <h3>Армения</h3>
         <p>Недорогая жизнь, безвиз для СНГ, тёплый климат.</p>
       </a>
       <a href="index.html?country1=serbia" class="country-card">
-        <img src="flags/serbia.png" alt="Сербия">
+        <img src="./images/сербия.jpg" alt="Сербия">
         <h3>Сербия</h3>
         <p>Умеренные цены, дружелюбное отношение, балканская природа.</p>
       </a>
       <a href="index.html?country1=philippines" class="country-card">
-        <img src="flags/philippines.png" alt="Филиппины">
+        <img src="./images/филиппины.jpg" alt="Филиппины">
         <h3>Филиппины</h3>
         <p>Тропики, море, английский язык, дешёвая еда.</p>
       </a>
       <a href="index.html?country1=vietnam" class="country-card">
-        <img src="flags/vietnam.png" alt="Вьетнам">
+        <img src="./images/вьетнам.jpg" alt="Вьетнам">
         <h3>Вьетнам</h3>
         <p>Азия, низкие цены, быстрая адаптация для фрилансеров.</p>
       </a>
       <a href="index.html?country1=albania" class="country-card">
-        <img src="flags/albania.png" alt="Албания">
+        <img src="./images/албания.jpg" alt="Албания">
         <h3>Албания</h3>
         <p>Балканы, море, безвиз, дёшево и спокойно.</p>
       </a>
       <a href="index.html?country1=georgia" class="country-card">
-        <img src="flags/georgia.png" alt="Грузия">
+        <img src="./images/грузия.jpg" alt="Грузия">
         <h3>Грузия</h3>
         <p>Digital Nomad виза, горы, вино, свобода и низкие цены.</p>
       </a>
       <a href="index.html?country1=mexico" class="country-card">
-        <img src="flags/mexico.png" alt="Мексика">
+        <img src="./images/мексика.jpg" alt="Мексика">
         <h3>Мексика</h3>
         <p>Латинская Америка, карибское море, виза для удалёнщиков.</p>
       </a>
       <a href="index.html?country1=portugal" class="country-card">
-        <img src="flags/portugal.png" alt="Португалия">
+        <img src="./images/португалия.jpg" alt="Португалия">
         <h3>Португалия</h3>
         <p>Европейское качество жизни, мягкий климат, безопасность.</p>
       </a>
       <a href="index.html?country1=thailand" class="country-card">
-        <img src="flags/thailand.png" alt="Таиланд">
+        <img src="./images/тайланд.jpg" alt="Таиланд">
         <h3>Таиланд</h3>
         <p>Пляжи, азиатская кухня, популярно среди фрилансеров.</p>
       </a>
       <a href="index.html?country1=turkiye" class="country-card">
-        <img src="flags/turkiye.png" alt="Турция">
+        <img src="./images/турция.jpg" alt="Турция">
         <h3>Турция</h3>
         <p>Солнце, еда, лояльное отношение к русскоязычным, дёшево.</p>
       </a>
