--- a/index.html
+++ b/index.html
@@ -1,121 +1,192 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Сравнение условий жизни в разных странах для миграции" />
-  <title>MigrationCompare — Сравнение стран</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/layout.css" />
-  <link rel="stylesheet" href="css/components.css" />
-  <link rel="stylesheet" href="css/responsive.css" />
-  
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Сравнение условий жизни в разных странах для миграции"
+    />
+    <title>MigrationCompare — Сравнение стран</title>
+    <!-- Подключаем шрифты и стили -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/components.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+  </head>
+  <body>
+    <!-- Шапка сайта -->
+    <header class="site-header">
+      <div class="container header-content">
+        <div class="logo">MigrationCompare</div>
+        <button class="mobile-menu-toggle" aria-label="Открыть меню">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        <nav class="nav">
+          <a href="index.html" class="active">Главная</a>
+          <a href="countries.html">Страны</a>
+          <a href="about.html">О нас</a>
+        </nav>
+      </div>
+    </header>
 
-  <!-- Шапка сайта -->
-  <header class="site-header">
-    <div class="container header-content">
-      <div class="logo">MigrationCompare</div>
-      <nav class="nav">
-        <a href="index.html">Главная</a>
-        <a href="countries.html">Страны</a> <!-- ✅ переход сюда -->
-        <a href="about.html">О нас</a>
-      </nav>
-    </div>
-  </header>
+    <!-- Главная секция со сравнением -->
+    <main class="comparison-section">
+      <div class="container">
+        <h1>Сравнение стран</h1>
 
-  <!-- Секция сравнения -->
-  <main class="comparison-section">
-    <div class="container">
-      <h1>Сравнение стран</h1>
+        <!-- Выпадающие списки выбора стран -->
+        <div class="countries">
+          <div class="country-select">
+            <label for="country1">Страна 1:</label>
+            <select id="country1" name="country1">
+              <option value="">Выберите страну</option>
+              <!-- Список стран -->
+              <option value="armenia">Армения</option>
+              <option value="serbia">Сербия</option>
+              <option value="philippines">Филиппины</option>
+              <option value="vietnam">Вьетнам</option>
+              <option value="albania">Албания</option>
+              <option value="georgia">Грузия</option>
+              <option value="mexico">Мексика</option>
+              <option value="portugal">Португалия</option>
+              <option value="thailand">Таиланд</option>
+              <option value="turkiye">Турция</option>
+            </select>
+          </div>
 
-      <!-- Блок выбора стран -->
-      <div class="countries">
-        <div class="country-select">
-          <label for="country1">Страна 1:</label>
-          <select id="country1" name="country1">
-            <option value="">Выберите страну</option>
-            <option value="armenia">Армения</option>
-            <option value="serbia">Сербия</option>
-            <option value="philippines">Филиппины</option>
-            <option value="vietnam">Вьетнам</option>
-            <option value="albania">Албания</option>
-            <option value="georgia">Грузия</option>
-            <option value="mexico">Мексика</option>
-            <option value="portugal">Португалия</option>
-            <option value="thailand">Таиланд</option>
-            <option value="turkiye">Турция</option>
-          </select>
+          <div class="country-select">
+            <label for="country2">Страна 2:</label>
+            <select id="country2" name="country2">
+              <option value="">Выберите страну</option>
+              <!-- Список стран -->
+              <option value="armenia">Армения</option>
+              <option value="serbia">Сербия</option>
+              <option value="philippines">Филиппины</option>
+              <option value="vietnam">Вьетнам</option>
+              <option value="albania">Албания</option>
+              <option value="georgia">Грузия</option>
+              <option value="mexico">Мексика</option>
+              <option value="portugal">Португалия</option>
+              <option value="thailand">Таиланд</option>
+              <option value="turkiye">Турция</option>
+            </select>
+          </div>
         </div>
 
-        <div class="country-select">
-          <label for="country2">Страна 2:</label>
-          <select id="country2" name="country2">
-            <option value="">Выберите страну</option>
-            <option value="armenia">Армения</option>
-            <option value="serbia">Сербия</option>
-            <option value="philippines">Филиппины</option>
-            <option value="vietnam">Вьетнам</option>
-            <option value="albania">Албания</option>
-            <option value="georgia">Грузия</option>
-            <option value="mexico">Мексика</option>
-            <option value="portugal">Португалия</option>
-            <option value="thailand">Таиланд</option>
-            <option value="turkiye">Турция</option>
-          </select>
+        <!-- Таблица сравнения с данными по странам -->
+        <div class="table-wrapper">
+          <!-- Спиннер загрузки, скрыт по умолчанию -->
+          <div class="spinner" id="table-spinner"></div>
+
+          <table class="comparison-table">
+            <thead>
+              <tr>
+                <th>Критерий</th>
+                <th id="country1-header">Страна 1</th>
+                <th id="country2-header">Страна 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- Строки сравнения по критериям -->
+              <tr>
+                <td>Стоимость жизни (в месяц)</td>
+                <td id="cost-country1"></td>
+                <td id="cost-country2"></td>
+              </tr>
+              <tr>
+                <td>Аренда жилья</td>
+                <td id="rent-country1"></td>
+                <td id="rent-country2"></td>
+              </tr>
+              <tr>
+                <td>Продукты</td>
+                <td id="groceries-country1"></td>
+                <td id="groceries-country2"></td>
+              </tr>
+              <tr>
+                <td>Транспорт</td>
+                <td id="transport-country1"></td>
+                <td id="transport-country2"></td>
+              </tr>
+              <tr>
+                <td>Средняя зарплата</td>
+                <td id="salary-country1"></td>
+                <td id="salary-country2"></td>
+              </tr>
+              <tr>
+                <td>Климат</td>
+                <td id="climate-country1"></td>
+                <td id="climate-country2"></td>
+              </tr>
+              <tr>
+                <td>Безопасность</td>
+                <td id="safety-country1"></td>
+                <td id="safety-country2"></td>
+              </tr>
+              <tr>
+                <td>Медицина</td>
+                <td id="healthcare-country1"></td>
+                <td id="healthcare-country2"></td>
+              </tr>
+              <tr>
+                <td>Интернет (скорость)</td>
+                <td id="internet-country1"></td>
+                <td id="internet-country2"></td>
+              </tr>
+              <tr>
+                <td>Русскоязычное сообщество</td>
+                <td id="russian-community-country1"></td>
+                <td id="russian-community-country2"></td>
+              </tr>
+              <tr>
+                <td>Нужна ли виза</td>
+                <td id="visa-country1"></td>
+                <td id="visa-country2"></td>
+              </tr>
+              <tr>
+                <td>Digital Nomad виза</td>
+                <td id="nomadVisa-country1"></td>
+                <td id="nomadVisa-country2"></td>
+              </tr>
+              <tr>
+                <td>Банковская система</td>
+                <td id="banking-country1"></td>
+                <td id="banking-country2"></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
 
-      <!-- Таблица сравнения -->
-      <div class="table-wrapper">
-        <div class="spinner" id="table-spinner"></div>
-
-        <table class="comparison-table">
-          <thead>
-            <tr>
-              <th>Критерий</th>
-              <th id="country1-header">Страна 1</th>
-              <th id="country2-header">Страна 2</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr><td>Стоимость жизни (в месяц)</td><td id="cost-country1"></td><td id="cost-country2"></td></tr>
-            <tr><td>Аренда жилья</td><td id="rent-country1"></td><td id="rent-country2"></td></tr>
-            <tr><td>Продукты</td><td id="groceries-country1"></td><td id="groceries-country2"></td></tr>
-            <tr><td>Транспорт</td><td id="transport-country1"></td><td id="transport-country2"></td></tr>
-            <tr><td>Средняя зарплата</td><td id="salary-country1"></td><td id="salary-country2"></td></tr>
-            <tr><td>Климат</td><td id="climate-country1"></td><td id="climate-country2"></td></tr>
-            <tr><td>Безопасность</td><td id="safety-country1"></td><td id="safety-country2"></td></tr>
-            <tr><td>Медицина</td><td id="healthcare-country1"></td><td id="healthcare-country2"></td></tr>
-            <tr><td>Интернет (скорость)</td><td id="internet-country1"></td><td id="internet-country2"></td></tr>
-            <tr><td>Русскоязычное сообщество</td><td id="russian-community-country1"></td><td id="russian-community-country2"></td></tr>
-            <tr><td>Нужна ли виза</td><td id="visa-country1"></td><td id="visa-country2"></td></tr>
-            <tr><td>Digital Nomad виза</td><td id="nomadVisa-country1"></td><td id="nomadVisa-country2"></td></tr>
-            <tr><td>Банковская система</td><td id="banking-country1"></td><td id="banking-country2"></td></tr>
-          </tbody>
-        </table>
+      <!-- Кнопка для экспорта таблицы в PDF -->
+      <div style="text-align: center; margin: 30px 0">
+        <button id="export-pdf" class="button">
+          Сохранить сравнение в PDF
+        </button>
       </div>
-    </div>
-    <div style="text-align: center; margin: 30px 0;">
-      <button id="export-pdf" class="button">Сохранить сравнение в PDF</button>
-    </div>
-  </main>
+    </main>
 
-  <!-- Подвал -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 MigrationCompare. Все права защищены.</p>
-    </div>
-  </footer>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-  <script src="js/pdf-export.js"></script>
-  
-  <script src="js/data.js" type="module"></script>
-  <script src="js/main.js" type="module"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
-</body>
+    <!-- Подвал сайта -->
+    <footer class="site-footer">
+      <div class="container">
+        <p>&copy; 2025 MigrationCompare. Все права защищены.</p>
+      </div>
+    </footer>
+
+    <!-- Скрипты: экспорт PDF, логика сравнения -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="js/pdf-export.js"></script>
+    <script src="js/data.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+  </body>
 </html>
