--- a/countries.html
+++ b/countries.html
@@ -39,7 +39,7 @@
 
         <!-- Карточка Армения -->
         <a href="index.html?country1=armenia" class="country-card">
-          <img src="/images/армения.jpg" alt="Армения" />
+          <img src="./images/армения.jpg" alt="Армения" />
           <h3>Армения</h3>
           <p>Недорогая жизнь, безвиз для СНГ, тёплый климат.</p>
         </a>
