--- a/index.html
+++ b/index.html
@@ -164,13 +164,24 @@
             </tbody>
           </table>
         </div>
-      </div>
 
-      <!-- Кнопка для экспорта таблицы в PDF -->
-      <div style="text-align: center; margin: 30px 0">
-        <button id="export-pdf" class="button">
-          Сохранить сравнение в PDF
-        </button>
+        <!-- Кнопки авиабилетов для выбранных стран -->
+        <div
+          id="avia-buttons"
+          style="
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 30px 0;
+          "
+        ></div>
+
+        <!-- Кнопка для экспорта таблицы в PDF -->
+        <div style="text-align: center; margin: 30px 0">
+          <button id="export-pdf" class="button">
+            Сохранить сравнение в PDF
+          </button>
+        </div>
       </div>
     </main>
 
